extends Node

@onready var DH = $DirectionHandler
@onready var GH = $GenerationHandler
@onready var HH = $HighlightHandler
@onready var IH = $InteractionHandler
@onready var UH = $UIHandler
@onready var SH = $StateHandler
@onready var TH = $TileHandler
@onready var EH = $EnemyHandler

func _ready():
	pass
